added ice cream list

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <li>Fish</li>
             <li>Prawn</li>
         </ul>
+        <p style="font-weight: bold;">List of Ice cream</p>
+        <ul>
+            <li>Strawberry flavour</li>
+            <li>Vanilla flavour</li>
+            <li>Mango flavour</li>
+            <li>Butterscotch flavour</li>
+        </ul>
     </div>
 </body>
 </html>
