added flowers list in index page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <li>Fish</li>
             <li>Prawn</li>
         </ul>
+        <p style="font-weight: bold;">List of flowers</p>
+        <ul>
+            <li>Rose</li>
+            <li>Lilly</li>
+            <li>Jasmine</li>
+            <li>Sunflower</li>
+        </ul>
     </div>
 </body>
 </html>
